--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,9 @@ rvm:
 notifications:
   recipients:
     - memde@engineyard.com
-branches:
-  only:
-    - master
+  webhooks:
+    urls:
+      - https://ensemble.engineyard.com/travis
+    on_success: always
+    on_failure: always
+    on_start: true
